<?xml version="1.0"?>
<package>
  <name>novatel_gps</name>
  <version>0.0.0</version>
  <description>The novatel_gps package</description>

  <maintainer email="georgebrindeiro@lara.unb.br">George Andrew Brindeiro</maintainer>
  <maintainer email="gabriel.araujo.5000@gmail.com">Gabriel Araujo</maintainer>
  <license>BSD</license>

  <author email="georgebrindeiro@lara.unb.br">George Andrew Brindeiro</author>
  <author email="gabriel.araujo.5000@gmail.com">Gabriel Araujo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>

  </export>
</package>
